--- a/wp-content/themes/electricTheme/product_detail.html
+++ b/wp-content/themes/electricTheme/product_detail.html
@@ -8,10 +8,10 @@
 
 
 
-        <a class="text-2">Đơn vị sửa điện công nghiệp KCN Hải Sơn đáng tin cậy</a>
+        <a class="text-2">Đơn vị Kỹ thuật điện KCN Hải Sơn đáng tin cậy</a>
     </div>
     <div class="box_container pd50">
-        <div class="tieude_giua">Đơn vị sửa điện công nghiệp KCN Hải Sơn đáng tin cậy</div>
+        <div class="tieude_giua">Đơn vị Kỹ thuật điện KCN Hải Sơn đáng tin cậy</div>
         <div class="content">
             <p style="font-size: 12pt; font-family: Calibri, sans-serif; text-align: justify;"><span
                     style="line-height:2em;"><span style="font-size:18px;"><span
@@ -23,7 +23,7 @@
                             này.</span></span></span></p>
 
             <p style="font-size:12pt; font-family:Calibri, sans-serif; text-align:center"><img
-                    alt="sửa điện công nghiệp KCN Hải Sơn" height="800"
+                    alt="Kỹ thuật điện KCN Hải Sơn" height="800"
                     src="http://suadiencongnghiep.vn/upload/images/1(4).jpg" width="600" /></p>
 
             <p style="font-size: 12pt; font-family: Calibri, sans-serif; text-align: center;"><span
@@ -36,7 +36,7 @@
             <h2 style="font-size: 12pt; font-family: Calibri, sans-serif; text-align: justify;"><span
                     style="color:#016f86;"><span style="font-size:24px;"><span style="line-height:2em;"><span
                                 style="font-family:arial,helvetica,sans-serif;"><strong>Những yêu cầu bắt buộc
-                                    khi sửa điện công nghiệp KCN Hải Sơn</strong></span></span></span></span>
+                                    khi Kỹ thuật điện KCN Hải Sơn</strong></span></span></span></span>
             </h2>
 
             <hr />
@@ -46,7 +46,7 @@
 
             <p style="font-size: 12pt; font-family: Calibri, sans-serif; text-align: justify;"><span
                     style="line-height:2em;"><span style="font-size:18px;"><span
-                            style="font-family:arial,helvetica,sans-serif;"> Sửa điện công nghiệp KCN Hải Sơn là
+                            style="font-family:arial,helvetica,sans-serif;"> Kỹ thuật điện KCN Hải Sơn là
                             một quá trình nguy hiểm và nó rất quan trong đối với doanh nghiệp. Do đó, việc sửa
                             điện công nghiệp KCN Hải Sơn này cần phải hết sức kỹ lưỡng. Cũng như tuân thủ quy
                             trình một cách nghiêm ngặt. Như vậy, mới có thể đảm bảo an toàn trong quá trình sửa
@@ -92,7 +92,7 @@
 
             <p style="font-size: 12pt; font-family: Calibri, sans-serif; text-align: justify;"> </p>
 
-            <p style="text-align:center"><img alt="sửa điện công nghiệp KCN Hải Sơn" height="800"
+            <p style="text-align:center"><img alt="Kỹ thuật điện KCN Hải Sơn" height="800"
                     src="http://suadiencongnghiep.vn/upload/images/41.jpg" width="600" /></p>
 
             <p style="font-size: 12pt; font-family: Calibri, sans-serif; text-align: center;"> </p>
@@ -151,7 +151,7 @@
             <h3 style="font-size: 12pt; font-family: Calibri, sans-serif; text-align: justify;"><span
                     style="font-size:22px;"><span style="line-height:2em;"><span
                             style="font-family:arial,helvetica,sans-serif;"><strong>Các biện pháp hạn chế tai
-                                nạn điện khi sửa điện công nghiệp KCN Hải Sơn</strong></span></span></span></h3>
+                                nạn điện khi Kỹ thuật điện KCN Hải Sơn</strong></span></span></span></h3>
 
             <p> </p>
 
@@ -209,7 +209,7 @@
             <p style="font-size: 12pt; font-family: Calibri, sans-serif; text-align: center;"><span
                     style="line-height:2em;"><span style="font-size:18px;"><span
                             style="font-family:arial,helvetica,sans-serif;"><img
-                                alt="sửa điện công nghiệp KCN Hải Sơn" height="800"
+                                alt="Kỹ thuật điện KCN Hải Sơn" height="800"
                                 src="http://suadiencongnghiep.vn/upload/images/7(2).jpg"
                                 width="600" /></span></span></span></p>
 
@@ -222,7 +222,7 @@
                                     style="color:#0000cc;">Nội dung liên quan: </span><a
                                     href="http://suadiencongnghiep.vn/hinh-anh-cong-trinh.html"><span
                                         style="color:#0000cc;">Những dự án - công trình sửa chữa điện nổi bật
-                                        của Long Gia</span></a></span></span></span></em></p>
+                                        của TIẾN PHÁT</span></a></span></span></span></em></p>
 
             <p
                 style="font-size: 12pt; font-family: Calibri, sans-serif; text-align: justify; margin-left: 40px;">
@@ -298,7 +298,7 @@
                                     href="https://suadiencongnghiep.vn/sua-dien-cong-nghiep-kcn-tan-duc"><span
                                         style="color:#0000cc;"><span
                                             style="white-space: pre-wrap; background-color: rgb(255, 255, 255);">Mách
-                                            bạn địa chỉ sửa điện công nghiệp KCN Tân Đức chuyên
+                                            bạn địa chỉ Kỹ thuật điện KCN Tân Đức chuyên
                                             nghiệp</span></span></a></span></span></span></em></p>
 
             <p style="text-align: justify; margin-left: 40px;"> </p>
@@ -317,10 +317,10 @@
 
             <p style="font-size: 12pt; font-family: Calibri, sans-serif; text-align: justify;"><span
                     style="line-height:2em;"><span style="font-size:18px;"><span
-                            style="font-family:arial,helvetica,sans-serif;"><strong> Long Gia</strong> là nhà
-                            thầu chuyên nhận thi công sửa điện công nghiệp KCN Hải Sơn. Chúng tôi đã trải qua
+                            style="font-family:arial,helvetica,sans-serif;"><strong> TIẾN PHÁT</strong> là nhà
+                            thầu chuyên nhận thi công Kỹ thuật điện KCN Hải Sơn. Chúng tôi đã trải qua
                             nhiều công trình điện lớn nhỏ, từng khắc phục những sự cố khó mà nhiều đơn vị khác
-                            bó tay. <strong>Long Gia</strong> có những thiết bị chuyên dụng để kiểm tra hệ thống
+                            bó tay. <strong>TIẾN PHÁT</strong> có những thiết bị chuyên dụng để kiểm tra hệ thống
                             điện một cách kỹ lưỡng nhất.</span></span></span></p>
 
             <p style="font-size: 12pt; font-family: Calibri, sans-serif; text-align: justify;"> </p>
@@ -328,7 +328,7 @@
             <p style="font-size: 12pt; font-family: Calibri, sans-serif; text-align: center;"><span
                     style="line-height:2em;"><span style="font-size:18px;"><span
                             style="font-family:arial,helvetica,sans-serif;"><img
-                                alt="sửa điện công nghiệp KCN Hải Sơn" height="800"
+                                alt="Kỹ thuật điện KCN Hải Sơn" height="800"
                                 src="http://suadiencongnghiep.vn/upload/images/2(4).jpg"
                                 width="600" /></span></span></span></p>
 
@@ -337,7 +337,7 @@
             <h3 style="font-size: 12pt; font-family: Calibri, sans-serif; text-align: justify;"><span
                     style="font-size:22px;"><span style="line-height:2em;"><span
                             style="font-family:arial,helvetica,sans-serif;"><strong>Tại sao nên chọn dịch vụ sửa
-                                chữa điện của Long Gia?</strong></span></span></span></h3>
+                                chữa điện của TIẾN PHÁT?</strong></span></span></span></h3>
 
             <p> </p>
 
@@ -345,7 +345,7 @@
                     style="line-height:2em;"><span style="font-size:18px;"><span
                             style="font-family:arial,helvetica,sans-serif;"> <strong>✔</strong> Đội ngũ kỹ thuật
                             viên tốt nghiệp các trường cao đẳng, đại học chính quy. Họ được đào tạo bởi các
-                            chuyên gia hàng đầu của <strong>Long Gia</strong></span></span></span></p>
+                            chuyên gia hàng đầu của <strong>TIẾN PHÁT</strong></span></span></span></p>
 
             <p style="font-size: 12pt; font-family: Calibri, sans-serif; text-align: justify;"><span
                     style="line-height:2em;"><span style="font-size:18px;"><span
@@ -380,8 +380,8 @@
 
             <p style="font-size: 12pt; font-family: Calibri, sans-serif; text-align: justify;"><span
                     style="line-height:2em;"><span style="font-size:18px;"><span
-                            style="font-family:arial,helvetica,sans-serif;"><strong> Long Gia</strong> tự hào là
-                            đơn vị sửa điện công nghiệp KCN Hải Sơn số 1 thị trường. Chúng tôi mong muốn mang
+                            style="font-family:arial,helvetica,sans-serif;"><strong> TIẾN PHÁT</strong> tự hào là
+                            đơn vị Kỹ thuật điện KCN Hải Sơn số 1 thị trường. Chúng tôi mong muốn mang
                             đến dịch vụ xứng đáng với những gì khách hàng đã bỏ ra.</span></span></span></p>
 
             <div align="center" style="font-size:12pt;font-family:Calibri, sans-serif;text-align:center;">
@@ -391,7 +391,7 @@
             <p style="font-size: 12pt; font-family: Calibri, sans-serif; text-align: justify;"><span
                     style="color:#ff0000;"><span style="line-height:2em;"><span style="font-size:18px;"><span
                                 style="font-family:arial,helvetica,sans-serif;"><strong>CÔNG TY TNHH THƯƠNG MẠI
-                                    DỊCH VỤ SỬA ĐIỆN CÔNG NGHIỆP LONG GIA</strong></span></span></span></span>
+                                    DỊCH VỤ KỸ THUẬT ĐIỆN TIẾN PHÁT</strong></span></span></span></span>
             </p>
 
             <p style="font-size: 12pt; font-family: Calibri, sans-serif; text-align: justify;"><span
